--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: Project-Budget-App
+    databaseName: project_budget_app
+    user: project_budget_app_user
 
 services:
   - type: web
-    name: mysite
+    name: Sz-solutions
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: project_budget_app
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
